Accelerated canvas enabled on https://www.mtjo.net/ memory increased to 100%
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox102 | --- | fixed |
People
(Reporter: 894846254, Assigned: lsalzman)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:100.0) Gecko/20100101 Firefox/100.0
Steps to reproduce:
Set gfx.canvas.accelerated to true
Visit https://www.mtjo.net
performance profile: https://share.firefox.dev/3DK6Ods
Actual results:
The memory gradually increases to 100% after a few seconds of visiting the webpage
Comment 3•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Canvas: 2D' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 5•4 years ago
|
||
It seems that client WebGL textures get GC'd way later than is really useful,
so we need to ensure that we explicitly delete WebGL textures to ensure that
it happens in a timely fashion.
Updated•4 years ago
|
Comment 10•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Hello there! I tried to reproduce this issue on Firefox 100.0, Win10 x64 bits, but the URL provided by the reporter is unresponsive. Instead I reproduced the memory usage issue using this link (link provided from a dupe of this bug). Memory increase up to 90% in Task Manager.
I verified the fixes in Firefox 102.0b5(20220607212916) and Nightly 103.0a1(20220608214824) on Win10 x64 and the memory drops significantly - around 50% maximum.
Given the fact that memory usage dropped by about half, I assume this would be the expected behavior of the fix?
Thank you.
| Assignee | ||
Updated•3 years ago
|
Description
•