Bug 1763370 - Explicitly delete WebGL textures in DrawTargetWebgl. r=aosmond,gfx-reviewers

It seems that client WebGL textures get GC'd way later than is really useful,
so we need to ensure that we explicitly delete WebGL textures to ensure that
it happens in a timely fashion.

Differential Revision: https://phabricator.services.mozilla.com/D146277